# Spyke

./: .env.example  .gitignore  .gitignore copy  IMPLEMENTATION_SUMMARY.md  Makefile  TAURI_SETUP.md  docker-compose.yml  package-lock.json  package.json  readme.md  setup-tauri.sh
.github/workflows/: mirror.yml  rust.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
backend/migration/src/: lib.rs  m20220101_000001_create_table_user.rs  m20220101_000002_create_channels.rs  m20220101_000003_create_table_message.rs  m20260128_145213_create_refresh_tokens.rs  m20260129_084245_create_servers.rs  m20260129_092557_create_server_member.rs  m20260309_143110_create_server_bans.rs  m20260310_092241_create_direct_message.rs  m20260311_000001_create_message_reactions.rs
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/dto/: apperror.rs  auth_dto.rs  channel_dto.rs  message_dto.rs  mod.rs  server_dto.rs  token_dto.rs
backend/src/application/services/: auth_service.rs  channel_service.rs  message_service.rs  mod.rs  server_service.rs
backend/src/application/utils/: jwt.rs
backend/src/domain/models/: channel.rs  direct_message.rs  message.rs  message_reaction.rs  mod.rs  refresh_token.rs  server_ban.rs  server_member.rs  server_model.rs  user.rs
backend/src/infrastructure/api/: mod.rs
backend/src/infrastructure/api/handlers/: auth.rs  channel.rs  message.rs  mod.rs  server.rs
backend/src/infrastructure/api/middlewares/: middleware.rs
backend/src/infrastructure/api/sockets/: websocket.rs
backend/tests/: auth_service_test.rs  auth_test.rs  channel_service_test.rs  jwt_test.rs  message_service_test.rs  message_test.rs  server_service_test.rs  server_test.rs  websocket_test.rs
frontend/: .browserlist  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tauri.conf.json
frontend/app/: context.tsx  globals.css  langContext.tsx  layout.tsx  page.tsx
frontend/app/main/: layout.tsx  page.tsx
frontend/app/utils/: notifications.ts
frontend/components/: chat.tsx  chatbar.tsx  loginform.tsx  mainbar.tsx  membersbar.tsx  navbar.tsx  registerform.tsx  userbar.tsx
frontend/lib/: api.ts  authFetch.ts  i18n.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: README.md
test coverage/: index.html
(+22 files in other folders)
