[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

rand = "0.9"
# Framework
axum = {version = "0.8", features = ["ws", "macros", "multipart"]}
async-trait = "0.1"

# uuid
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Middleware (CORS)
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace", "fs"] }

# Password Hashing
argon2 = "0.5"

# JWT
jsonwebtoken = {version = "9", default-features = false }
chrono = "0.4"

# Env
dotenvy = "0.15"

# ORM & DB
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "sqlx-sqlite", "mock" ] }
sea-orm-migration = "1.1"
migration = { path = "migration" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
futures = "0.3.31"

# File handling
multer = "3.1"
image = "0.25"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
fake = "2.9"
serial_test = "3.3.1"
tokio-tungstenite = "0.28.0"