[package]
name = "chat-app"
version = "0.1.0"
description = "A chat application built with Tauri"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "dialog-all"] }
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
